2007-12-24  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/svn/svn: fix typo which caused svn checkouts
	  without a cache directory to contain too many directory
	  elements

2007-10-29  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/autotools/Makefile.am extensions/base/Makefile.am
	  configure.ac: rename subcommandsdir to subcommanddir

2007-10-29  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* framework/dev.in: support --help and --version

2007-10-29  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/base/subcommands/edit: default to the current task

2007-10-29  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/svn/configure.m4 extensions/Makefile.am
	  extensions/base/configure.m4 extensions/base/Makefile.am
	  extensions/cvs/configure.m4 extensions/quilt/configure.m4
	  autogen configure.ac config/dev_setup_extension.m4: new more
	  automatic method of including extension configuration
	* extensions/autotools: new extension

2007-10-28  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	- switch to a new, variable-based, task definition format, 
	  including the new notion of "loader" scripts
	- move files under extensions/base into subdirectories by purpose

2007-10-28  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* framework/dev_functions.sh: don't require that subcommands be
	  executable

2007-10-28  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/base/new configure.ac config/dev_compat_prog_path.m4:
	  Check that 'mkdir' supports -p, and use it instead of $MKDIR_P
	* extensions/base/Makefile.am extensions/base/unload: remove unused 
	  'unload'
	* configure.in: move extensions-specific checks
	* INSTALL config/missing config/install-sh: automake upgrade

2007-07-27  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* extensions/base/new configure.ac: use mkdir -p to create the
	  tasks directory

2007-07-25  Dustin J. Mitchell <dustin@cs.uchicago.edu>
	* autogen: make it a real shell script
